assets/css/style.css
:root {
	--background: #242834;
	--formInput: #1E252D;
	--highlight: #E31A6C;
	--highlightDarker: #b71556;
	--text: #FEFEFF;
	--backgroundDarker: #1A242E;
	--backgroundLighter: #343a4b;
	--primary: #1778BB;
}


* {
	/* padding: 0; */
	/* margin: 0; */
	/* border: 1px solid blue; */
	color: var(--text);
}

body {
	background-color: var(--background);
}

main {
	display: flex;
	justify-content: space-between;
	position: relative;
	flex-wrap: wrap;
}

#left-margin {
	flex: 1 0 0;
	border: 1px solid var(--background);
	/* that's a load-bearing invisible border */
}

#right-margin {
	flex: 0 0 0;
}

header {
	background-color: var(--backgroundDarker);
}

ul {
	list-style: none;
	margin: 0;
}

#search {
	flex: 3 0 0;
	margin-left: 50px;
	margin-right: 50px;
}

#form-title h2 {
	color: var(--text);
}

#search-section {
	margin: auto;
	width: 100%;
}

#search-results {
	position: relative;
	left: -100%;
	width: 100%;
	transition: left 1s;
}

#search-results li {
	padding: 5px;
	border-radius: 5px;
	transition: background-color .5s;
}

#search-results li:hover {
	background-color: var(--backgroundDarker);
}

#search-results h3 {
	color: var(--primary);
	text-shadow: 0px 0px 2px var(--primary);
}

#search-results p {
	padding-left: 30px;
	text-transform: capitalize;
}

#data {
	display: none;
}

.expired-date {
	color: var(--primary);
	text-shadow: 0 0 1px var(--primary);
}

h3 {
	margin-bottom: 5px;
}

p {
	margin: 5px 0;
}

#calendar {
	display: flex;
	flex-direction: column;
}

#banner {
	display: flex;
	align-items: center;
	flex-wrap: wrap;
	margin-bottom: 30px;
	position: relative;
}

#banner h1 {
	margin-left: 50px;
	flex: 0 0 auto;
}

#banner-img {
	height: 67px;
	margin-left: 15px;
	flex: 0 0 auto;
}

#banner p {
	flex: 1 0 0;
	text-align: right;
	margin-right: 50px;
	font-size: 22px;
	margin-left: auto;
}

#search-history {
	flex: 1 0 0;
	position: relative;
}

#clear-history {
	opacity: 0%;
	position: absolute;
	right: 0;
	transition: opacity 0.5s;
}

#search-history:hover #clear-history {
	opacity: 100%;
	transition: opacity 3s;
}

#show-history {
	display: none;
}

footer {
	position: absolute;
	bottom: 0;
	width: 100%;
}


.menu {
	background: var(--backgroundDarker);
	width: 100%;
	align-items: center;
}

.menu li {
	background: var(--backgroundDarker);
}

.menu li:hover {
	background: var(--backgroundLighter);
}

.menu li:first-child:hover {
	background: var(--backgroundDarker);
}

.menu a {
	color: #fff;
}

.menu .github {
	margin-right: 10px;
	width: 0px;
	transition: width .5s;
}

.menu li:hover .github {
	width: 40px;
}

#wikidata {
	min-width: 150px;
}

#page-container {
	position: relative;
	min-height: 100vh;
}

#content-wrap {
	padding-bottom: 3rem;
	/* Footer height */
}

#open-event object {
	height: 45px;
	width: 40px;
	justify-content: center;
	align-items: center;
}


#open-event {
	padding-top: 0;
	padding-left: 0;
	
	display: flex;
}

#footer {
	position: absolute;
	bottom: 0;
	width: 100%;
	height: 2.5rem;
	/* Footer height */
}

/* media queries */
/* above this: foundation would be very-large */

/* foundation-large */
@media screen and (max-width: 1200px) {
	#banner h1 {
		font-size: 35px;
		margin-left: 25px;
	}
	
	#banner-img {
		height: 45px;
	}
	
	#banner p {
		font-size: 18px;
		margin-right: 25px;
	}
	
	.menu .github {
		margin-right: 5px;
	}

	.menu li:hover .github {
		width: 25px;
	}
	
	.menu li {
		font-size: 16px;
	}

}

/* foundation-medium */
@media screen and (max-width: 1024px) {
	#banner h1 {
		font-size: 30px;
		margin-left: 15px;
	}
	
	#banner-img {
		height: 35px;
		width: 35px;
	}
	
	#banner p {
		font-size: 16px;
		margin-right: 15px;
	}
	
	#search {
		margin-left: 25px;
		margin-right: 25px;
	}
	
	h2 {
		font-size: 30px;
	}
	
	#search-history {
		opacity: 0;
		margin-top: 30px;
	}
	
	#clear-history {
		opacity: 1;
		font-size: 14px;
		position: default;
		left: 0;
		right: 15px;
	}
	
	#show-history {
		width: 50px;
		height: 50px;
		background-color: black;
		position: absolute;
		bottom: -50px;
		right: 0;
		display: flex;
		justify-content: center;
		align-items: center;
		z-index: 1;
	}
	
	#arrow {
		width: 40%;
		height: 40%;
		border-bottom: 4px solid white;
		border-right: 4px solid white;
		transform: rotate(135deg);
		display: block;
		margin-left: 10px;
	}
	
	.menu .github {
		display: block;
		width: 25px;
		margin-right: auto;
		margin-left: auto;
		margin-bottom: 2px;
	}

	.menu li {
		font-size: 16px;
	}
}

/* foundation-small */
@media screen and (max-width: 640px) {
	#banner {
		flex-wrap: wrap;
		justify-content: center;
		margin-bottom: 0;
	}
	
	#banner h1 {
		flex-grow: 0;
		text-align: right;
		margin-left: auto;
	}
	
	#banner-img {
		flex-grow: 0;
		margin-right: auto;
	}
	
	#banner p {
		flex-grow: 1;
		flex-basis: 100%;
		text-align: center;
	}
	
	#search {
		flex: 5 0 0;
		margin-left: 0px;
		margin-right: 0px;
	}
	
	#search-history {
		order: -1;
		flex-grow: 1;
		flex-basis: 100%;
		height: 0;
		text-align: center;
	}
	
	#clear-history {
		position: absolute;
		left: 0;
		right: auto;
		top: 0;
	}
	
	#right-margin {
		flex-grow: 1;
	}
}

/* smallest reasonable size: 360px */

